# sysmlv2x

./: .gitignore  README.md  pyproject.toml
examples/: basic_notebook.ipynb  simpleSM.sysml
src/sysmlv2x_lib/: __init__.py  syside_helpers.py  sysmlv2x.py
