[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sysmlv2x_lib"
version = "0.1.0"
description = "Python library for executable SysML v2"
authors = [{name="Robert Karban", email="robert.karban@planetaryutilities.com"}]
readme = "README.md"
license = {file = "LICENSE"}
dependencies = []
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
